little bit of css to make sure there is always a bottom of our window and its not covered by the footer

--- a/src/app/team-member-detail/team-member-detail.component.css
+++ b/src/app/team-member-detail/team-member-detail.component.css
@@ -9,7 +9,7 @@
 .member-info {
   font-size: 16px;
   font-weight: bold;
-  margin: 12px 0; 
+  margin: 12px 0;
 }
 
 .history {
@@ -73,4 +73,8 @@
 .date-box {
   width: 50%;
   padding: 0;
+}
+
+.page-header {
+  margin: 12px 0;
 }
